[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-databricks"
version = "0.1.0"
description = "MCP server for Databricks integration"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-sdk>=0.68.0",
    "databricks-sql-connector>=4.1.4",
    "fastmcp>=2.12.4",
    "mcp[cli]>=1.17.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
mcp-databricks = "main:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["main.py"]
